hard-gists/4132799/run.log
=== Docker Run Log for 4132799 ===
Started at: Mi 29. Okt 14:22:45 CET 2025

[2025-10-29 14:22:46] START: Running container for 4132799
[2025-10-29 14:22:46] SUCCESS: Container 36a51cd55620554bba2f8695ad4bc9d12cb692c9e0937740a07aafc731b063f8 started for 4132799
=== Container logs for 4132799 ===
  File "/snippet.py", line 41
    print str(img.format)
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4132799 ===
[2025-10-29 14:22:48] INFO: Container 36a51cd55620554bba2f8695ad4bc9d12cb692c9e0937740a07aafc731b063f8 has stopped
